fix image size and background cut off

--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ body{
 /* ---------------Main------------------------ */
 .main-container{
   min-height: 100vh;
-  min-width: 100%;
+  min-width: 100vw;
 }
 .main-container.light-mode{
   background-color: hsl(0, 0%, 98%);
@@ -119,7 +119,7 @@ body{
 }
 
 .main-container .select-box{
-  margin: 70px 90px 0;
+  margin: 70px 30px 0;
 }
 
 .main-container .search-box .input-search{
@@ -210,6 +210,8 @@ body{
 .main-country-container{
   display:flex;
   flex-wrap: wrap;
+  margin: 0 auto;
+  max-width: 1440px;
 }
 
 .main-container.light-mode .country-container{
@@ -317,13 +319,14 @@ body{
 
 .flag-box{
   overflow: hidden;
-  max-width: 40%;
+  max-width: 550px;
+  height: auto;
   margin: 0 40px;
 }
 
 .flag-box img{
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  height: auto;
 }
 
 .detail-box{
